# trifinger_rl_datasets

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
demo/: camera_images.py  create_video.py  load_dataset.py  load_dataset_part.py  load_filtered_dicts.py  load_image_data_only.py  random_access.py  simulation_rollout.py  using_flat_observations.py
trifinger_rl_datasets/: __init__.py  dataset_env.py  evaluate_sim.py  evaluation.py  policy_base.py  sampling_utils.py  sim_env.py  utils.py
trifinger_rl_datasets/data/: r1_camera180.yml  r1_camera300.yml  r1_camera60.yml  r3_camera180.yml  r3_camera300.yml  r3_camera60.yml  r4_camera180.yml  r4_camera300.yml  r4_camera60.yml  r5_camera180.yml  r5_camera300.yml  r5_camera60.yml  r6_camera180.yml  r6_camera300.yml  r6_camera60.yml  r7_camera180.yml  r7_camera300.yml  r7_camera60.yml  r8_camera180.yml  r8_camera300.yml  r8_camera60.yml  trifingerpro_shuffle_cube_trajectory_fast.npy
