[metadata]
name = trifinger_rl_datasets
version = attr: trifinger_rl_datasets.__version__
description = Gym environments which provide offline RL datasets collected on the TriFinger system.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nico Gürtler
author_email = nico.guertler@tuebingen.mpg.de
keywords =
    offline reinforcement learning
    reinforcement learning 
    robotics
    TriFinger
    Real Robot Challenge
    dexterous manipulation
license = BSD 3-Clause

[options]
packages = find:
install_requires = 
    numpy
    gymnasium
    zarr
    tqdm
    numpy-quaternion
    trifinger_simulation>=1.4.0
    opencv-python
    lmdb

[options.package_data]
trifinger_rl_datasets = py.typed
trifinger_rl_datasets.data =
    *.npy
    *.yml
